# CubebertFirmware

./: CMakeLists.txt  README.md
docs/: ipc_commands.md
lib/: CMakeLists.txt
lib/ClawControl/: CMakeLists.txt  claw.cpp  claw.h  fingers.cpp  fingers.h  palm.cpp  palm.h  stepper.pio  wrist.cpp  wrist.h
lib/FirmwareIPC/: CMakeLists.txt  command.cpp  command.h  fipc.cpp  fipc.h
lib/Lighting/: CMakeLists.txt  lighting.cpp  lighting.h
